--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -1,3 +1,17 @@
+article.link {
+  h1 {
+    padding-left: 48px;
+    background: transparent image-url('link.png') no-repeat 0 0.4em;
+  }
+}
+
+article.post {
+  h1 {
+    padding-left: 48px;
+    background: transparent image-url('post.png') no-repeat 0 0.4em;
+  }
+}
+
 article {
   overflow: hidden;
   padding-top: 1em;
