--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -1,4 +1,3 @@
-$noise-bg: image-url('noise.png') top left;
 $img-border: inline-image('dotted-border.png');
 
 // Main Link Colors
@@ -71,10 +70,10 @@ html {
 }
 body {
   > div {
-    background: $sidebar-bg $noise-bg;
     border-bottom: 1px solid $page-border-bottom;
+    background: $sidebar-bg;
     > div {
-      background: $main-bg $noise-bg;
+      background: $main-bg;
       border-right: 1px solid $sidebar-border;
     }
   }
