--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -21,15 +21,15 @@ $text-color-light: #444444 !default;
 $type-border: #ddd !default;
 
 /* Navigation */
-$nav-bg: #ddd !default;
+$nav-bg: #fff !default;
 $nav-color: darken($nav-bg, 38) !default;
 $nav-color-hover: darken($nav-color, 25) !default;
 $nav-placeholder: desaturate(darken($nav-bg, 10), 15) !default;
 $nav-border: darken($nav-bg, 10) !default;
-$nav-border-top: lighten($nav-bg, 15) !default;
-$nav-border-bottom: darken($nav-bg, 25) !default;
-$nav-border-left: darken($nav-bg, 11) !default;
-$nav-border-right: lighten($nav-bg, 7) !default;
+$nav-border-top: $nav-bg !default;
+$nav-border-bottom: $nav-bg !default;
+$nav-border-left: $nav-bg !default;
+$nav-border-right: $nav-bg !default;
 
 /* Sidebar colors */
 $sidebar-bg: #ffffff !default;
@@ -46,11 +46,10 @@ $twitter-status-link: lighten($sidebar-link-color-subdued, 15) !default;
 $footer-bg: $nav-bg !default;
 $footer-color: darken($footer-bg, 38) !default;
 $footer-color-hover: darken($footer-color, 10) !default;
-$footer-border-top: lighten($footer-bg, 15) !default;
-$footer-border-bottom: darken($footer-bg, 15) !default;
+$footer-border-top: $nav-bg !default;
+$footer-border-bottom: $nav-bg !default;
 $footer-link-color: darken($footer-bg, 38) !default;
 $footer-link-color-hover: darken($footer-color, 25) !default;
-$page-border-bottom: darken($footer-bg, 5) !default;
 
 
 /* Core theme application */
@@ -70,7 +69,6 @@ html {
 }
 body {
   > div {
-    border-bottom: 1px solid $page-border-bottom;
     background: $sidebar-bg;
     > div {
       background: $main-bg;
