Less padding above articles.

--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -14,11 +14,10 @@ article.post {
 
 article {
   overflow: hidden;
-  padding-top: 1em;
+  padding-bottom: 1em;
   a { @extend .force-wrap; }
   header {
     position: relative;
-    padding-top: 2em;
     padding-bottom: 1em;
     margin-bottom: 1em;
     background: $img-border bottom left repeat-x;
