--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -22,6 +22,7 @@ article {
     margin-bottom: 1em;
     background: $img-border bottom left repeat-x;
     h1 {
+      display: inline-block;
       margin: 0;
       a { text-decoration: none;
         &:hover { text-decoration: underline; } }
@@ -31,9 +32,10 @@ article {
       color: $text-color-light;
       margin: 0;
       &.meta {
+        display: inline-block;
         @extend .sans;
-        text-transform: uppercase;
-        position: absolute; top: 0;
+        color: #999;
+        margin-left: 1em;
       }
     }
     @media only screen and (min-width: 768px) {
