--- a/sass/partials/_blog.scss
+++ b/sass/partials/_blog.scss
@@ -1,28 +1,14 @@
-article.link {
-  h1 {
-    padding-left: 48px;
-    background: transparent image-url('link.png') no-repeat 0 0.4em;
-  }
-}
-
-article.post {
-  h1 {
-    padding-left: 48px;
-    background: transparent image-url('post.png') no-repeat 0 0.4em;
-  }
-}
-
 article {
   overflow: hidden;
-  padding-bottom: 1em;
+  padding-top: 1em;
   a { @extend .force-wrap; }
   header {
     position: relative;
+    padding-top: 2em;
     padding-bottom: 1em;
     margin-bottom: 1em;
     background: $img-border bottom left repeat-x;
     h1 {
-      display: inline-block;
       margin: 0;
       a { text-decoration: none;
         &:hover { text-decoration: underline; } }
@@ -32,10 +18,9 @@ article {
       color: $text-color-light;
       margin: 0;
       &.meta {
-        display: inline-block;
         @extend .sans;
-        color: #999;
-        margin-left: 1em;
+        text-transform: uppercase;
+        position: absolute; top: 0;
       }
     }
     @media only screen and (min-width: 768px) {
@@ -107,6 +92,7 @@ article + article {
   article header { background: none; padding-bottom: 0; }
   article h1 {
     font-size: 2.2em;
+    a { color: inherit; &:hover { color: $link-color-hover; } }
   }
   a[rel=full-article] {
     background: darken($main-bg, 5);
