--- a/sass/partials/sidebar/_base.scss
+++ b/sass/partials/sidebar/_base.scss
@@ -39,6 +39,10 @@ aside.sidebar {
       margin-bottom: 0;
     }
   }
+  a {
+    color: inherit;
+    @include transition(color .5s);
+  }
   &:hover a {
     color: $sidebar-link-color;
     &:hover { color: $sidebar-link-color-hover; }
@@ -72,7 +76,7 @@ aside.sidebar {
       padding-bottom: .15em;
       @include border-bottom-right-radius(.3em);
       text-align: center;
-      background: $main-bg;
+      background: $main-bg $noise-bg;
       border-bottom: 1px solid $sidebar-border;
       border-right: 1px solid $sidebar-border;
       content: "\00BB";
