--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -24,4 +24,9 @@
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   {% include custom/head.html %}
+
+  <!-- OpenID -->
+  <link rel="openid.server" href="http://www.myopenid.com/server">
+  <link rel="openid.delegate" href="http://pda.myopenid.com/">
+
 </head>
